--- a/index.html
+++ b/index.html
@@ -17,6 +17,39 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="summary">
+        <h2><strong>Read Online for free </strong></h2>
+        <p>Looking for a great place to read your favorite books and novels?</p>
+        <p>
+          This platform was made to help readers navigate looking into different
+          books of different genres
+        </p>
+        <p>
+          Readers are able to keep track of their favorite books thus
+          effeciently ensuring sufficiency during the navigation and reading
+          process
+        </p>
+        <p>Start reading now to enjoy a new feeling in mystery!</p>
+      </section>
+      <section class="book-list">
+        <h2>Books</h2>
+        <div class="books-container">
+          <div class="category">
+            <h3>upcoming</h3>
+            <ul id="UpcomingList"></ul>
+          </div>
+          <div class="category">
+            <h3>Currently Reading</h3>
+            <ul id="currentlyReadingList"></ul>
+          </div>
+          <div class="category">
+            <h3>Finished</h3>
+            <ul id="finishedList"></ul>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="scripts/scripts.js"></script>
   </body>
 </html>
